# SonioxPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: api_coverage.md  transport.md
examples/async/: CMakeLists.txt  main.cpp
examples/async_timestamps/: CMakeLists.txt  main.cpp
examples/realtime/: CMakeLists.txt  main.cpp
examples/realtime_mic/: CMakeLists.txt  main.cpp
examples/realtime_translation/: CMakeLists.txt  main.cpp
examples/tts_multiplex/: CMakeLists.txt  main.cpp
examples/tts_realtime/: CMakeLists.txt  main.cpp
examples/tts_rest/: CMakeLists.txt  main.cpp
examples/tts_streaming_text/: CMakeLists.txt  main.cpp
lib/sonioxpp/: CMakeLists.txt
lib/sonioxpp/include/sonioxpp/: api_constants.hpp  async_client.hpp  auth_client.hpp  realtime_client.hpp  soniox.hpp  stt_client.hpp  tts_client.hpp  types.hpp
lib/sonioxpp/include/sonioxpp/transport/: curl_http_transport.hpp  http_transport.hpp  lws_websocket_transport.hpp  websocket_transport.hpp  winhttp_websocket_transport.hpp
lib/sonioxpp/src/: async_client.cpp  async_client_impl.hpp  auth_client.cpp  realtime_client.cpp  realtime_client_impl.hpp  stt_client.cpp  tts_client.cpp
lib/sonioxpp/src/transport/: curl_http_transport.cpp  lws_websocket_transport.cpp  winhttp_websocket_transport.cpp
scripts/: run_all_examples.ps1  run_all_examples.sh  run_all_examples_linux.sh  run_all_examples_mac.sh
